2008-02-09  Sven Herzberg  <sven@imendio.com>

	* src/monkey/bubble.c: (bubble_init): use G_DEFINE_TYPE

2008-02-09  Sven Herzberg  <sven@imendio.com>

	* src/monkey/shooter.c: (shooter_init): use G_DEFINE_TYPE

2008-02-09  Sven Herzberg  <sven@imendio.com>

	* src/monkey/monkey.c: (monkey_init): use G_DEFINE_TYPE

2008-02-09  Sven Herzberg  <sven@imendio.com>

	* src/monkey/playground.c: (playground_init): use G_DEFINE_TYPE

2008-02-09  Sven Herzberg  <sven@imendio.com>

	* src/net/game-manager-proxy.c: (net_game_manager_proxy_init): use
	G_DEFINE_TYPE

2008-02-09  Sven Herzberg  <sven@imendio.com>

	* src/net/game-manager.c: (network_game_manager_init): use
	G_DEFINE_TYPE

2008-02-09  Sven Herzberg  <sven@imendio.com>

	* src/net/player.c: (network_player_init): use G_DEFINE_TYPE

2008-02-09  Sven Herzberg  <sven@imendio.com>

	* src/net/simple-server.c: (network_simple_server_init): use
	G_DEFINE_TYPE

2008-02-09  Sven Herzberg  <sven@imendio.com>

	* src/net/client.c: (network_client_init),
	(network_client_class_init): use G_DEFINE_TYPE

2008-02-09  Sven Herzberg  <sven@imendio.com>

	* src/net/game.c: (network_game_init): use G_DEFINE_TYPE

2008-02-09  Sven Herzberg  <sven@imendio.com>

	* src/net/message-handler.c: (network_message_handler_init): use
	G_DEFINE_TYPE

2008-02-09  Sven Herzberg  <sven@imendio.com>

	* src/ui/game-2-player-manager.c: (game_2_player_manager_init): use
	G_DEFINE_TYPE_WITH_CODE

2008-02-09  Sven Herzberg  <sven@imendio.com>

	* src/ui/game-sound.c: (mb_game_sound_init): use G_DEFINE_TYPE

2008-02-09  Sven Herzberg  <sven@imendio.com>

	* src/ui/game.c: (game_init): use G_DEFINE_TYPE

2008-02-08  Sven Herzberg  <sven@imendio.com>

	* src/ui/game-network-player.c: (game_network_player_init): use
	G_DEFINE_TYPE

2008-02-08  Sven Herzberg  <sven@imendio.com>

	* src/ui/ui-main.c: use G_DEFINE_TYPE

2008-02-08  Sven Herzberg  <sven@imendio.com>

	* src/ui/game-2-player.c: (game_2_player_init),